--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
   </style>
 </head>
 
-<body>
+<body class="body">
 
-  <main class="container">
-    <header>
-      <div class="logo"><img src="/assets//images/logo.svg" alt="logo">
-      </div>
-      <button class="switch"><img src="/assets/images/icon-moon.svg" alt="light mode"></button>
-    </header>
+  <header>
+    <div class="logo"><img src="/assets/images/logo.svg" alt="logo">
+    </div>
+    <button class="switch"><img src="/assets/images/icon-moon.svg" alt="light mode"></button>
+  </header>
+  <div class="container">
     <div class="header">
       <h2>Extensions List</h2>
 
       <div class="filters">
-        <button id="all">All</button><button id="active">Active</button><button id="inactive">Inactive</button>
+        <button id="all" class="btn">All</button><button id="active" class="btn">Active</button><button id="inactive" class="btn">Inactive</button>
       </div>
     </div>
     <div class="extension-grid">
     </div>
 
-  </main>
-  <div class="attribution">
+  </div>
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 
   <script src="script.js"></script>
 </body>
